force-app/main/default/objects/Asset_Type__c/fields/Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>Asset_Category__c</fullName>
    <label>Asset Category</label>
    <referenceTo>Asset_Category__c</referenceTo>
    <relationshipLabel>Asset Types</relationshipLabel>
    <relationshipName>Asset_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>