force-app/main/default/objects/Asset_Type__c/fields/Type_Hierarchy_Path__c.field-meta.xml
<CustomField>
    <fullName>Type_Hierarchy_Path__c</fullName>
    <formula
  >Name + BLANKVALUE(" ➡️ " + Asset_Category__r.Category_Hierarchy_Path__c, "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Hierarchy Path</label>
    <type>Text</type>
</CustomField>