force-app/main/default/objects/Asset_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Manufacturer__c</columns>
    <columns>Model_Number__c</columns>
    <columns>Asset_Category__c</columns>
    <columns>Type_Hierarchy_Path__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Asset Types</label>
</ListView>